Término do exercício 22

--- a/modulo03/ex022/fundo006.html
+++ b/modulo03/ex022/fundo006.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de imagem de fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('pack-imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shortrand - Background 
+            
+            color > image > position > repeat > [size] > attachment 
+            
+            size não funciona nos navegadores */
+
+            background: black url('pack-imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +38,17 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur maiores consectetur impedit repellendus ex laboriosam, quam nisi consequuntur officiis provident est possimus autem nulla, deserunt quidem excepturi earum iste ducimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam molestiae nihil reprehenderit eaque, autem repellendus harum. Dolorem eveniet, recusandae vel est dicta fuga incidunt aliquam id alias ex? Veniam, eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, veniam. Quisquam, inventore excepturi id architecto omnis nam nostrum earum dolores accusantium culpa fugiat neque labore? Similique neque libero quo voluptate!</p>
     </main>
 </body>
 </html>
